--- a/lenses/reporter/lens.css
+++ b/lenses/reporter/lens.css
@@ -263,8 +263,9 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	z-index: 10;
 }
-.lens-reporter dl.slidedeck .slide-type-video .image .play-video-alternative .icon-shape {
+.lens-reporter dl.slidedeck .slide-type-video .image .play-video-alternative .play-icon {
 	display: block;
 	position: absolute;
 	top: 0;
@@ -272,7 +273,7 @@
 	width: 100%;
 	height: 100%;
 }
-.lens-reporter dl.slidedeck .slide-type-video .image .play-video-alternative:active .icon-shape {
+.lens-reporter dl.slidedeck .slide-type-video .image .play-video-alternative:active .play-icon {
 	top: 1px;
 }
 
