--- a/lenses/o-town/lens.css
+++ b/lenses/o-town/lens.css
@@ -36,19 +36,6 @@
     background-size: cover;
     background-position: center center;
 }
-.lens-o-town dl.slidedeck > dd > dl.slidesVertical > dd.has-image div.slide-image {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.lens-o-town dl.slidedeck > dd > dl.slidesVertical > dd.has-image.tile-image div.slide-image {
-    -webkit-background-size: auto;
-    -moz-background-size: auto;
-    -o-background-size: auto;
-    background-size: auto;
-    background-repeat: repeat;
-}
 
 /* Start video stuff */
 .lens-o-town dl.slidedeck .slide-type-video dd{
@@ -85,7 +72,7 @@
 .lens-o-town.sd2-nav-thumb.sd2-small dl.slidedeck .slide-source-custom .sd2-content-wrapper {
     left: 44px;
 }
-.lens-o-town dl.slidedeck .slide-type-video .video-wrapper .cover{
+.lens-o-town dl.slidedeck .slide-type-video .video-wrapper .cover {
     position: absolute;
     z-index: 2;
     top: 0;
@@ -94,10 +81,14 @@
     bottom: 0;
     background-position: center center;
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+}
+.lens-o-town.sd2-dark dl.slidedeck .slide-type-video .video-wrapper .cover { background-color: #000; }
+.lens-o-town.sd2-light dl.slidedeck .slide-type-video .video-wrapper .cover { background-color: #fff; }
+.lens-o-town dl.slidedeck .sd2-image-scaling-cover.slide-type-video .video-wrapper .cover {
     background-size: cover;
+}
+.lens-o-town dl.slidedeck .sd2-image-scaling-contain.slide-type-video .video-wrapper .cover {
+    background-size: contain;
 }
 .lens-o-town dl.slidedeck .slide-type-video.slide-source-youtube .video-wrapper .cover .play,
 .lens-o-town dl.slidedeck .slide-type-video.slide-source-vimeo .video-wrapper .cover .play,
@@ -165,17 +156,6 @@
 }
 .lens-o-town dl.slidedeck dd.has-image .slide-content { right: 50%; }
 .lens-o-town dl.slidedeck dd.no-image .slide-content { right: 0; }
-.lens-o-town dl.slidedeck > dd .slide-image {
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 8;
-    background-position: center center;
-}
-.lens-o-town dl.slidedeck > dd.no-image .slide-image { display: none; }
 .lens-o-town dl.slidedeck > dd .slide-content span.slidedeck-index-indicator {
     position: absolute;
     top: 25px;
@@ -510,7 +490,7 @@
     line-height: 1.6em;
 }
 .lens-o-town.sd2-medium dl.slidedeck > dd .slide-title { font-size: 2.1em; }
-.lens-o-town.sd2-medium.content-source-twitter dl.slidedeck > dd .slide-title { font-size: 2.0em; }
+.lens-o-town.sd2-medium dl.slidedeck > dd.slide-source-twitter .slide-title { font-size: 2.0em; }
 .lens-o-town.sd2-medium dl.slidedeck dd.no-image .slide-title { font-size: 3.0em; }
 .lens-o-town.sd2-medium > a.deck-navigation.vertical { margin-left: -5px; }
 
@@ -530,15 +510,15 @@
 .lens-o-town.sd2-small dl.slidedeck dd.slide-source-custom.custom-layout-block-quote .sd2-node-caption {
     padding: 0;
 }
-.lens-o-town.sd2-small dl.slidedeck > dd .slide-image { left: 30px; }
+.lens-o-town.sd2-small dl.slidedeck > dd .sd2-slide-background { left: 30px; }
 .lens-o-town.sd2-small dl.slidedeck > dd .slide-title,
 .lens-o-town.sd2-small dl.slidedeck dd.no-image .slide-title,
 .lens-o-town.sd2-small dl.slidedeck dd.slide-source-custom .sd2-slide-title {
     font-size: 2.1em;
     text-transform: none;
 }
-.lens-o-town.sd2-small.content-source-twitter dl.slidedeck > dd .slide-title,
-.lens-o-town.sd2-small.content-source-twitter dl.slidedeck dd.no-image .slide-title { font-size: 1.5em; }
+.lens-o-town.sd2-small dl.slidedeck > dd.slide-source-twitter .slide-title,
+.lens-o-town.sd2-small dl.slidedeck dd.no-image.slide-source-twitter .slide-title { font-size: 1.5em; }
 .lens-o-town.sd2-small dl.slidedeck > dd .slide-text { display: none; }
 .lens-o-town.sd2-small.sd2-show-title dl.slidedeck > dd .slide-meta { padding-top: 20px; }
 .lens-o-town.sd2-small dl.slidedeck > dd .slide-author-avatar {
@@ -601,15 +581,20 @@
 .lens-o-town.sd2-show-author dl.slidedeck > dd .slide-content,
 .lens-o-town.sd2-show-author-avatar dl.slidedeck > dd .slide-content { display: block; }
 
-.lens-o-town.sd2-show-title dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-show-excerpt dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-show-author dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-show-author-avatar dl.slidedeck > dd .slide-image { left: 50%; }
+.lens-o-town.sd2-show-title dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-show-excerpt dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-show-author dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-show-author-avatar dl.slidedeck > dd .sd2-slide-background { left: 50%; }
 
-.lens-o-town.sd2-small.sd2-show-title dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-small.sd2-show-excerpt dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-small.sd2-show-author dl.slidedeck > dd .slide-image,
-.lens-o-town.sd2-small.sd2-show-author-avatar dl.slidedeck > dd .slide-image { left: 0; }
+.lens-o-town.content-source-custom.sd2-show-title dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.content-source-custom.sd2-show-excerpt dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.content-source-custom.sd2-show-author dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.content-source-custom.sd2-show-author-avatar dl.slidedeck > dd .sd2-slide-background { left: 0; }
+
+.lens-o-town.sd2-small.sd2-show-title dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-small.sd2-show-excerpt dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-small.sd2-show-author dl.slidedeck > dd .sd2-slide-background,
+.lens-o-town.sd2-small.sd2-show-author-avatar dl.slidedeck > dd .sd2-slide-background { left: 0; }
 
 .lens-o-town dd.no-excerpt div.slide-text,
 .lens-o-town dd.no-excerpt div.slide-title,
@@ -626,13 +611,13 @@
 .lens-o-town dl.slidedeck .slidesVertical dd.has-image.no-excerpt .slide-meta { background: none !important; }
 
 .lens-o-town dl.slidedeck dd.has-image.no-excerpt.no-title .slide-content { display: none !important; }
-.lens-o-town dl.slidedeck dd.has-image.no-excerpt.no-title .slide-image { left: 0; }
+.lens-o-town dl.slidedeck dd.has-image.no-excerpt.no-title .sd2-slide-background { left: 0; }
 
 /*Gallery Deck Variations*/
 .lens-o-town.sd2-nav-thumb { height: 500px; }
 .lens-o-town.sd2-nav-thumb dl.slidedeck { height: 500px; }
 .lens-o-town.sd2-nav-thumb dl.slidedeck > dd > dl.slidesVertical > dd { padding: 0; }
-.lens-o-town.sd2-nav-thumb dl.slidedeck > dd > dl.slidesVertical > dd.has-image div.slide-image {
+.lens-o-town.sd2-nav-thumb dl.slidedeck > dd > dl.slidesVertical > dd.has-image div.sd2-slide-background {
     position: absolute;
     top: 0;
     right: 0;
@@ -859,7 +844,7 @@
 .lens-o-town.sd2-nav-thumb.auto-play div.vertical-slide-nav-elems-wrapper span.vertical-slide-nav a span.snake-4 { width: 3px; height: 0; }
 /*Gallery Color Variations*/
 /*Dark*/
-.lens-o-town.sd2-nav-thumb.sd2-dark dl.slidedeck > dd > dl.slidesVertical > dd div.slide-image { border-left: 1px solid #000; }
+.lens-o-town.sd2-nav-thumb.sd2-dark dl.slidedeck > dd > dl.slidesVertical > dd div.sd2-slide-background { border-left: 1px solid #000; }
 .lens-o-town.sd2-nav-thumb.sd2-dark dl.slidedeck > dd .slide-content { background: url('hash-black-bg.png') 0 0 repeat; }
 .lens-o-town.sd2-nav-thumb.sd2-dark dl.slidedeck > dd .slide-title { color: #ff00ff; }
 .lens-o-town.sd2-nav-thumb.sd2-dark dl.slidedeck > dd .slide-title a { color: #ff00ff; }
@@ -914,7 +899,7 @@
 .lens-o-town.sd2-nav-thumb.sd2-dark > span.deck-set-rules span.sd2-light { background-color: #414141; }
 
 /*Light*/
-.lens-o-town.sd2-nav-thumb.sd2-light dl.slidedeck > dd > dl.slidesVertical > dd div.slide-image { border-left: 1px solid #646465; }
+.lens-o-town.sd2-nav-thumb.sd2-light dl.slidedeck > dd > dl.slidesVertical > dd div.sd2-slide-background { border-left: 1px solid #646465; }
 .lens-o-town.sd2-nav-thumb.sd2-light dl.slidedeck > dd .slide-content { background: url('hash-white-bg.png') 0 0 repeat; }
 .lens-o-town.sd2-nav-thumb.sd2-light dl.slidedeck > dd .slide-title { color: #ff00ff; }
 .lens-o-town.sd2-nav-thumb.sd2-light dl.slidedeck > dd .slide-title a { color: #ff00ff; }
@@ -1004,7 +989,7 @@
 .lens-o-town.sd2-nav-thumb.sd2-medium dl.slidedeck > dd .slide-text { display: none !important; }
 .lens-o-town.sd2-nav-thumb.sd2-medium > a.deck-navigation.vertical { margin-left: 17px; }
 /*Small*/
-.lens-o-town.sd2-nav-thumb.sd2-small dl.slidedeck > dd dl.slidesVertical > dd div.slide-image { left: 44px; }
+.lens-o-town.sd2-nav-thumb.sd2-small dl.slidedeck > dd dl.slidesVertical > dd div.sd2-slide-background { left: 44px; }
 .lens-o-town.sd2-nav-thumb.sd2-small dl.slidedeck > dd dl.slidesVertical > dd .slide-content {
     height: auto;
     top: 0;
