* Adding RESS (REsponsive Server-Side) options to the shortcode ress=1 and proportional=no * Adding RESS (REsponsive Server-Side) options to the widget options * Shortcode now accepts start=# where # is the starting slide (needed for RESS) * Adding a fix that prevents a JavaScript lockup if the O-Town lens has thumbnails and is less than 110px tall * Adding an optimization (speedup) to the iFrame rendering methods (echo scripts instead of linking them) * Adding a check to some of the sources that may prevent some warnings from being shown.
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@591049 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slidedeck.css
+++ b/css/slidedeck.css
@@ -2024,3 +2024,7 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
     visibility: hidden !important;
     opacity: 0 !important; 
 }
+
+div.sd2-ress-wrapper {
+	overflow: hidden;
+}
